CGoGN: Removed useless dependency to openNL ; updated CMakeLists
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@11040 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/extlibs/CGoGN/CMakeLists.txt
+++ b/Sofa/extlibs/CGoGN/CMakeLists.txt
@@ -98,7 +98,7 @@ include_directories(
 
 # define libs for external libs
 SET (CGoGN_EXT_LIBS
-    nl
+    # nl
 	${ZLIB_LIBRARIES}
 	${LIBXML2_LIBRARIES}
 	${Boost_SYSTEM_LIBRARY}
@@ -118,19 +118,19 @@ SET (CGoGN_EXT_LIBS
 #ENDIF(WIN32)
 
 
-IF(APPLE)
-# attention a changer pour chercher la bonne version automatiquement
-	SET(CMAKE_OSX_SYSROOT "/Developer/SDKs/MacOSX10.6.sdk" CACHE STRING "developer SDK")
-	SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-undefined -Wl,dynamic_lookup")
-	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DMAC_OSX")
-	SET(CMAKE_OSX_ARCHITECTURES x86_64)
-	SET (CGoGN_EXT_LIBS ${CGoGN_EXT_LIBS} "-framework Foundation -framework cocoa" )
-ENDIF(APPLE)
+# IF(APPLE)
+# # attention a changer pour chercher la bonne version automatiquement
+# 	SET(CMAKE_OSX_SYSROOT "/Developer/SDKs/MacOSX10.6.sdk" CACHE STRING "developer SDK")
+# 	SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-undefined -Wl,dynamic_lookup")
+# 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DMAC_OSX")
+# 	SET(CMAKE_OSX_ARCHITECTURES x86_64)
+# 	SET (CGoGN_EXT_LIBS ${CGoGN_EXT_LIBS} "-framework Foundation -framework cocoa" )
+# ENDIF(APPLE)
 
-add_subdirectory(ThirdParty/OpenNL)
-file(GLOB NL_H ThirdParty/OpenNL/src/NL/*.h)
-file(COPY ${NL_H}
-	 DESTINATION ${CGoGN_ROOT_DIR}/ThirdParty/include/NL)
+# add_subdirectory(ThirdParty/OpenNL)
+# file(GLOB NL_H ThirdParty/OpenNL/src/NL/*.h)
+# file(COPY ${NL_H}
+# 	 DESTINATION ${CGoGN_ROOT_DIR}/ThirdParty/include/NL)
 
 IF (WITH_ZINRI)
 	add_definitions(-DWITH_ZINRI)
