--- a/Sofa/extlibs/CGoGN/CMakeLists.txt
+++ b/Sofa/extlibs/CGoGN/CMakeLists.txt
@@ -28,7 +28,7 @@ SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
 
 # SET ( WITH_GLEWMX OFF CACHE BOOL "use multi-contex GLEW" )
 
-SET ( BUILD_SHARED_LIBS OFF )
+SET ( BUILD_SHARED_LIBS ON )
 SET ( WITH_ASSIMP OFF)
 SET ( WITH_QT OFF)
 SET ( DESIRED_QT_VERSION "4")
@@ -118,7 +118,7 @@ SET (CGoGN_EXT_LIBS
 #ENDIF(WIN32)
 
 
-# IF(APPLE)
+# IF(APPLE)APPLE
 # # attention a changer pour chercher la bonne version automatiquement
 # 	SET(CMAKE_OSX_SYSROOT "/Developer/SDKs/MacOSX10.6.sdk" CACHE STRING "developer SDK")
 # 	SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-undefined -Wl,dynamic_lookup")
@@ -196,9 +196,17 @@ ELSE(WIN32)
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -fPIC")
 #	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wclobbered -Wempty-body -Wignored-qualifiers -Wmissing-field-initializers -Wsign-compare -Wtype-limits -Wuninitialized -fPIC")
 	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Woverride-init -fPIC")
-	add_library(${PROJECT_NAME} ${files_topology} ${files_container} ${files_algo} ${files_utils} )
+	IF (ONELIB)
+		add_library(${PROJECT_NAME} ${files_topology} ${files_container} ${files_algo} ${files_utils} )
+		SET(CGOGN_LIBS "${PROJECT_NAME}")
+	ELSE (ONELIB)
+		add_library( ${PROJECT_NAME}	${files_topology})
+		add_library( ${PROJECT_NAME}_container	${files_container})
+		add_library( ${PROJECT_NAME}_algo		${files_algo})
+		add_library( ${PROJECT_NAME}_utils 		${files_utils} )
+		SET(CGOGN_LIBS "${PROJECT_NAME}_topology ${PROJECT_NAME}_container ${PROJECT_NAME}_algo ${PROJECT_NAME}_utils")
+	ENDIF (ONELIB)
 ENDIF(WIN32)
-
 
 AddLinkerDependencies(${CGoGN_EXT_LIBS})
 
