CGoGN : now cgogn uses sofa's defaulttypes::Vecs
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@11060 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/extlibs/CGoGN/CMakeLists.txt
+++ b/Sofa/extlibs/CGoGN/CMakeLists.txt
@@ -208,7 +208,6 @@ ELSE(WIN32)
 	ENDIF (ONELIB)
 ENDIF(WIN32)
 
-AddLinkerDependencies(${CGoGN_EXT_LIBS})
-
+AddLinkerDependencies(${CGoGN_EXT_LIBS} SofaDefaultType)
 
 include(${SOFA_CMAKE_DIR}/postProject.cmake)
