--- a/Sofa/applications/plugins/SofaSimpleGUI/glutOnePick/CMakeLists.txt
+++ b/Sofa/applications/plugins/SofaSimpleGUI/glutOnePick/CMakeLists.txt
@@ -4,7 +4,8 @@ set(SOURCE_FILES
 
     glutOnePick.cpp
 )
-add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${RC_FILES})
+
+add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
 AddLinkerDependencies(SimpleGUI)
 
