ADD : scenecreator.inl in order to lighten scenecreator.h to optimize compilation time on windows
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@11118 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/SceneCreator/CMakeLists.txt
+++ b/Sofa/applications/plugins/SceneCreator/CMakeLists.txt
@@ -4,18 +4,17 @@ set(HEADER_FILES
 
     initSceneCreator.h
     SceneCreator.h
-        GetVectorVisitor.h
-        GetAssembledSizeVisitor.h
-
+    GetVectorVisitor.h
+    GetAssembledSizeVisitor.h
+	SceneCreator.inl
 	)
 
 set(SOURCE_FILES
 
     initSceneCreator.cpp
     SceneCreator.cpp
-        GetVectorVisitor.cpp
-        GetAssembledSizeVisitor.cpp
-
+    GetVectorVisitor.cpp
+    GetAssembledSizeVisitor.cpp
 	)
 
 AddCompilerDefinitions("SOFA_BUILD_SCENECREATOR")
