Moved test stuff from SceneCreator to a new class SofaTest/Elasticity_test
and cleaned up a bit

git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@11125 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/SofaTest/CMakeLists.txt
+++ b/Sofa/applications/plugins/SofaTest/CMakeLists.txt
@@ -5,12 +5,13 @@ set(HEADER_FILES
     initTestPlugin.h
     Sofa_test.h
     Mapping_test.h
-
+    Elasticity_test.h
 	)
 
 set(SOURCE_FILES
 
     initTestPlugin.cpp
+    Elasticity_test.cpp
 
 	)
 
@@ -20,5 +21,6 @@ AddLinkerDependencies(SofaSimulationGraph)
 AddLinkerDependencies(
     SceneCreator
 )
+include_directories("${SOFA_EXTLIBS_DIR}/gtest/include")
 
 include(${SOFA_CMAKE_DIR}/postProject.cmake)
