removed tutorials/objectCreator. Use plugins/SceneCreator instead.
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@11127 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/tutorials/CMakeLists.txt
+++ b/Sofa/applications/tutorials/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-RegisterProjects("ObjectCreator" PATH "${CMAKE_CURRENT_SOURCE_DIR}/objectCreator")
+#RegisterProjects("ObjectCreator" PATH "${CMAKE_CURRENT_SOURCE_DIR}/objectCreator")
 
 RegisterProjects("ChainHybrid" OPTION "SOFA-TUTORIAL_CHAIN_HYBRID" COMPILE_DEFINITIONS "SOFA_HAVE_TUTORIALS" PATH "${CMAKE_CURRENT_SOURCE_DIR}/chainHybrid")
 RegisterProjects("CompositeObject" OPTION "SOFA-TUTORIAL_COMPOSITE_OBJECT" COMPILE_DEFINITIONS "SOFA_HAVE_TUTORIALS" PATH "${CMAKE_CURRENT_SOURCE_DIR}/compositeObject")
