--- a/Sofa/applications/tutorials/chainHybrid/CMakeLists.txt
+++ b/Sofa/applications/tutorials/chainHybrid/CMakeLists.txt
@@ -8,7 +8,7 @@ set(SOURCE_FILES
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
-AddLinkerDependencies(SofaSimulationTree SofaComponentMain SofaGuiMain ObjectCreator)
+AddLinkerDependencies(SofaSimulationTree SofaComponentMain SofaGuiMain SceneCreator)
 
 include(${SOFA_CMAKE_DIR}/postProject.cmake)
 
