--- a/Sofa/applications/tutorials/houseOfCards/CMakeLists.txt
+++ b/Sofa/applications/tutorials/houseOfCards/CMakeLists.txt
@@ -9,7 +9,7 @@ set(SOURCE_FILES
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
 AddSourceDependencies(eigen)
-AddLinkerDependencies(SofaSimulationTree SofaComponentMain SofaGuiMain ObjectCreator)
+AddLinkerDependencies(SofaSimulationTree SofaComponentMain SofaGuiMain SceneCreator)
 
 include(${SOFA_CMAKE_DIR}/postProject.cmake)
 
