Test: adding the python controller "SofaTest.Controller" that can return a test result directly from a python execution (in fact moving this mechanism from Compliant_test into SofaTest to make it usable by any plugin test).
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@11142 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/SofaTest/CMakeLists.txt
+++ b/Sofa/applications/plugins/SofaTest/CMakeLists.txt
@@ -6,6 +6,7 @@ set(HEADER_FILES
     Sofa_test.h
     Mapping_test.h
     Elasticity_test.h
+    
 	)
 
 set(SOURCE_FILES
@@ -13,15 +14,28 @@ set(SOURCE_FILES
     initTestPlugin.cpp
     Sofa_test.cpp
     Elasticity_test.cpp
-
+    
 	)
+	
+set(PYTHON_FILES "")
 
-add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})
+if(SOFA-PLUGIN_SOFAPYTHON)
+    list(APPEND HEADER_FILES "Python_test.h")
+    list(APPEND SOURCE_FILES "Python_test.cpp")
+
+    AddLinkerDependencies(SofaPython)
+    
+    # include python files
+    include(./python/python.cmake)
+endif()
+
+
+
+add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES} ${PYTHON_FILES})
 
 AddLinkerDependencies(SofaSimulationGraph)
-AddLinkerDependencies(
-    SceneCreator
-)
+AddLinkerDependencies(SceneCreator)
+
 include_directories("${SOFA_EXTLIBS_DIR}/gtest/include")
 
 include(${SOFA_CMAKE_DIR}/postProject.cmake)
