make python test files appear in project
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@11151 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/Compliant/Compliant_test/CMakeLists.txt
+++ b/Sofa/applications/plugins/Compliant/Compliant_test/CMakeLists.txt
@@ -25,9 +25,11 @@ if(SOFA-PLUGIN_SOFAPYTHON)
     AddCompilerDefinitions("COMPLIANT_TEST_PYTHON_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}/python\"")
     list(APPEND SOURCE_FILES "python_test_list.cpp")
     AddLinkerDependencies(SofaPython)
+    # include python files
+    include(./python/python.cmake)
 endif()
 
-add_executable(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES} ${RC_FILES})
+add_executable(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES} ${RC_FILES} ${PYTHON_FILES})
 
 AddLinkerDependencies(Compliant SofaTest)
 
