FIX : compilation under VC2012 handle tuple template ADD : i ) macro SOFA_TestPlugin_API for export of symbols ii) instanciation of template class to avoid code bloating iii) in the Cmake add dependence with gtest library.
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@11180 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/SofaTest/CMakeLists.txt
+++ b/Sofa/applications/plugins/SofaTest/CMakeLists.txt
@@ -16,7 +16,8 @@ set(SOURCE_FILES
     Elasticity_test.cpp
     
 	)
-	
+AddCompilerDefinitions("SOFA_BUILD_TEST")	
+AddCompilerDefinitions("GTEST_LINKED_AS_SHARED_LIBRARY")	
 set(PYTHON_FILES "")
 
 if(SOFA-PLUGIN_SOFAPYTHON)
@@ -37,5 +38,5 @@ AddLinkerDependencies(SofaSimulationGraph)
 AddLinkerDependencies(SceneCreator)
 
 include_directories("${SOFA_EXTLIBS_DIR}/gtest/include")
-
+AddLinkerDependencies(gtest)
 include(${SOFA_CMAKE_DIR}/postProject.cmake)
