--- a/Sofa/applications/plugins/SofaTest/SofaTest_test/CMakeLists.txt
+++ b/Sofa/applications/plugins/SofaTest/SofaTest_test/CMakeLists.txt
@@ -53,6 +53,7 @@ AddLinkerDependencies(
     SofaSimulationGraph
     SofaBoundaryCondition
     SofaEngine
+	gtest
 )
 
 include(${SOFA_CMAKE_DIR}/postProject.cmake)
