--- a/Sofa/applications/plugins/SofaTest/CMakeLists.txt
+++ b/Sofa/applications/plugins/SofaTest/CMakeLists.txt
@@ -17,7 +17,8 @@ set(SOURCE_FILES
     
 	)
 AddCompilerDefinitions("SOFA_BUILD_TEST")	
-AddCompilerDefinitions("GTEST_LINKED_AS_SHARED_LIBRARY")	
+AddCompilerDefinitions("GTEST_LINKED_AS_SHARED_LIBRARY") 
+AddCompilerDefinitions("_VARIADIC_MAX=10")	
 set(PYTHON_FILES "")
 
 if(SOFA-PLUGIN_SOFAPYTHON)
