Try to fix compilation
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@11188 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/SofaTest/CMakeLists.txt
+++ b/Sofa/applications/plugins/SofaTest/CMakeLists.txt
@@ -39,5 +39,9 @@ AddLinkerDependencies(SofaSimulationGraph)
 AddLinkerDependencies(SceneCreator)
 
 include_directories("${SOFA_EXTLIBS_DIR}/gtest/include")
-AddLinkerDependencies(gtest)
+
+if(CMAKE_SYSTEM MATCHES "Windows")
+    AddLinkerDependencies(gtest)
+endif(CMAKE_SYSTEM MATCHES "Windows")
+
 include(${SOFA_CMAKE_DIR}/postProject.cmake)
