push 684d8db..c5fd6b1
* commit c5fd6b1a288ca8cbe63bfd504cdead37b6533dcf
Add CylinderModel without adding intersection functions

|  19 files changed, 657 insertions(+), 699 deletions(-)

* commit 7f902f37c8a52157463486c3e2b5e231632fcae4
Erase not useful function in RigidCapsuleModel.h

|  10 files changed, 255 insertions(+), 37 deletions(-)

* commit 199e27c5c09aab0aa358f9204a6a54cfcc246758
Little commit

   3 files changed, 7 insertions(+), 2 deletions(-)



git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@11204 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/SofaTest/SofaTest_test/CMakeLists.txt
+++ b/Sofa/applications/plugins/SofaTest/SofaTest_test/CMakeLists.txt
@@ -7,7 +7,6 @@ set(SOURCE_FILES
     PrimitiveCreation.cpp
     RigidMapping_test.cpp
     EulerImplicit_test.cpp
-    SAPTest.cpp
     Matrix_test.inl
     Matrix_test.cpp
     OBBTest.cpp
@@ -17,9 +16,8 @@ set(SOURCE_FILES
     ProjectToLineConstraint_test.cpp
     BaryMapperTest.cpp
     LoadScene_test.cpp
-    TeschnerSpatialHashing_test.cpp
     DAG_test.cpp
-    #BroadPhaseTest.cpp
+    BroadPhaseTest.cpp
         )
 
 if(APPLE)
