push 88401dd..271f9ce
* commit 271f9ceb9cac70941272a02095cfa1405299cb4f
move tests/ to framework/framework_test/

|  11 files changed, 506 insertions(+), 508 deletions(-)

* commit 1d35eb2b03299f2021fec30ea269737b0f49984f
cmake: Fix typo in preProject.cmake

   1 files changed, 1 insertions(+), 1 deletions(-)



git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@11212 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/framework/framework_test/CMakeLists.txt
+++ b/Sofa/framework/framework_test/CMakeLists.txt
@@ -1,13 +1,11 @@
-
-include_directories("${SOFA_EXTLIBS_DIR}/gtest/include")
-include_directories("${SOFA_FRAMEWORK_DIR}")
-link_directories("${SOFA_BUILD_DIR}/extlibs/gtest")
+include(${SOFA_CMAKE_DIR}/preProject.cmake)
 
 set(SOURCE_FILES
     framework/sofa/defaulttype/VecTypesTest.cpp
     framework/sofa/helper/system/atomicTest.cpp
     framework/sofa/core/objectmodel/AspectPoolTest.cpp)
 
-add_executable(framework_test ${SOURCE_FILES})
+add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 target_link_libraries(framework_test gtest_main SofaCore)
 
+include(${SOFA_CMAKE_DIR}/postProject.cmake)
