SofaTest: fixed link on osx/clang
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@11213 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/SofaTest/CMakeLists.txt
+++ b/Sofa/applications/plugins/SofaTest/CMakeLists.txt
@@ -40,8 +40,15 @@ AddLinkerDependencies(SceneCreator)
 
 include_directories("${SOFA_EXTLIBS_DIR}/gtest/include")
 
+# TODO: shouldn't this be on for everyone ?
+
 if(CMAKE_SYSTEM MATCHES "Windows")
     AddLinkerDependencies(gtest)
 endif(CMAKE_SYSTEM MATCHES "Windows")
+
+if(APPLE)
+    AddLinkerDependencies(gtest)
+endif()
+
 
 include(${SOFA_CMAKE_DIR}/postProject.cmake)
