FIXING erroneous commits
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@11234 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/SofaTest/CMakeLists.txt
+++ b/Sofa/applications/plugins/SofaTest/CMakeLists.txt
@@ -41,6 +41,7 @@ AddLinkerDependencies(SceneCreator)
 include_directories("${SOFA_EXTLIBS_DIR}/gtest/include")
 
 # TODO: shouldn't this be on for everyone ?
+# FF: it seems that it is not needed, and even problematic, on Linux (?)
 
 if(CMAKE_SYSTEM MATCHES "Windows")
     AddLinkerDependencies(gtest)
