image: add VoronoiToMesh engine to make a mesh out of a voronoi image
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@11252 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/image/CMakeLists.txt
+++ b/Sofa/applications/plugins/image/CMakeLists.txt
@@ -16,7 +16,8 @@ set(SOURCE_FILES
     MarchingCubesEngine.cpp 
     ImageSampler.cpp 
     ImageExporter.cpp 
-    ImageDataDisplay.cpp)
+    ImageDataDisplay.cpp
+    VoronoiToMeshEngine.cpp)
 
 set(HEADER_FILES
     initImage.h
@@ -37,7 +38,8 @@ set(HEADER_FILES
     VectorVis.h 
     ImageAlgorithms.h 
     Containers.h 
-    ImageDataDisplay.h)
+    ImageDataDisplay.h
+    VoronoiToMeshEngine.h)
 
 set(README_FILES image.txt)
 
