test for BaseNode::getPathName()
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@11254 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/SofaTest/SofaTest_test/CMakeLists.txt
+++ b/Sofa/applications/plugins/SofaTest/SofaTest_test/CMakeLists.txt
@@ -21,6 +21,7 @@ set(SOURCE_FILES
     BaryMapperTest.cpp
     LoadScene_test.cpp
     DAG_test.cpp
+    Node_test.cpp
     BroadPhaseTest.cpp
         )
 
