framework_test: fix paths in CMakeLists.txt
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@11267 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/framework/framework_test/CMakeLists.txt
+++ b/Sofa/framework/framework_test/CMakeLists.txt
@@ -1,11 +1,11 @@
 include(${SOFA_CMAKE_DIR}/preProject.cmake)
 
 set(SOURCE_FILES
-    framework/sofa/defaulttype/VecTypesTest.cpp
-    framework/sofa/helper/system/atomicTest.cpp
-    framework/sofa/helper/system/FileSystemTest.cpp
-    framework/sofa/helper/system/UtilsTest.cpp
-    framework/sofa/core/objectmodel/AspectPoolTest.cpp)
+    defaulttype/VecTypesTest.cpp
+    helper/system/atomicTest.cpp
+    helper/system/FileSystemTest.cpp
+    helper/system/UtilsTest.cpp
+    core/objectmodel/AspectPoolTest.cpp)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 add_definitions("-DFRAMEWORK_TEST_RESOURCES_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}/resources\"")
