python test appears in project
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@11283 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/SofaTest/SofaTest_test/CMakeLists.txt
+++ b/Sofa/applications/plugins/SofaTest/SofaTest_test/CMakeLists.txt
@@ -36,9 +36,11 @@ endif()
 if(SOFA-PLUGIN_SOFAPYTHON)
     list(APPEND SOURCE_FILES "python_test_list.cpp")
     AddLinkerDependencies(SofaPython)
+    # include python test files
+    include(./python_tests/python.cmake)
 endif()
 
-add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${RC_FILES})
+add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${RC_FILES} ${PYTHON_FILES})
 
 # Define a macro to get the absolute path to a directory;
 # absolute paths are perfectly OK for test resources.
