Compliant: adding a dependency to GenerateRigid (it should not be shuch a strong dependency but generally it is needed)
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@11333 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/applications/plugins/Compliant/CMakeLists.txt
+++ b/Sofa/applications/plugins/Compliant/CMakeLists.txt
@@ -162,6 +162,7 @@ add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES} ${README_FILE
 
 AddCompilerDefinitions("SOFA_BUILD_Compliant")
 AddLinkerDependencies(SofaEigen2Solver SofaUserInteraction SofaComponentMisc SofaHelper SofaSimulationGraph)
+AddSourceDependencies( GenerateRigid )
 
 # is this really useful?
 #if(NOT APPLE)
