cmake+ccache: cmake 2.8.12 can no longer use ccache as the compiler, but it as to be defined in the CMakeLists.txt. If installed, ccache is now automatically used and only the compilers (ie gcc/g++, clang/clang++) have to be given in the cmake command while creating the build directory.
git-svn-id: svn://scm.gforge.inria.fr/svnroot/sofa/trunk@11359 b7f1a160-662a-0410-a6d8-bea165342f16

--- a/Sofa/CMakeLists.txt
+++ b/Sofa/CMakeLists.txt
@@ -1,5 +1,14 @@
 cmake_minimum_required(VERSION 2.8.8)
 
+# automatically use ccache if it is installed
+find_program(ccache_cmd NAMES ccache)
+if(ccache_cmd)
+    SET_PROPERTY(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
+    SET_PROPERTY(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
+    message(STATUS "Using ccache for building")
+endif()
+
+
 set(SOLUTION_NAME "Sofa")
 project(${SOLUTION_NAME})
 
@@ -8,10 +17,10 @@ project(${SOLUTION_NAME})
 set_property(GLOBAL
 PROPERTY USE_FOLDERS ON)
 
-include(cmake/utils.cmake)
-include(cmake/environment.cmake)
-include(cmake/functions.cmake)
-include(cmake/options.cmake)
+include(cmake/utils.cmake)       # utils macros
+include(cmake/environment.cmake) # paths
+include(cmake/functions.cmake)   # sofa build functions
+include(cmake/options.cmake)     # user options
 
 
 if(NOT PRECONFIGURE_DONE)
